# Forecasting-WebApp

./: GOOGLE Stock Data.csv  app.py  environment.yml  pyproject.toml  readme.md  requirements.txt  test_app.py
